configuramos los tests para la clase order

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
             "Solid\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Solid\\Tests\\": "tests/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     }
